fixed collapse

--- a/businessTransfers/src/app/about-us/transactions/transactions.component.css
+++ b/businessTransfers/src/app/about-us/transactions/transactions.component.css
@@ -12,7 +12,7 @@ body { position: absolute; }
 
 .slide {
   background-image:url('../../../assets/homeImage.jpg');
-  min-height: 100vh;
+  max-height: 100vh;
   min-width: 100vw;
   background-attachment: fixed;
   background-position: center;
@@ -125,6 +125,8 @@ p, td, tr{
   border-collapse:collapse;
   border-spacing:0;
   margin:0px auto;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 .tg td{font-family:Arial, sans-serif;
   font-size:17px;
@@ -134,6 +136,8 @@ p, td, tr{
   overflow:auto;
   word-break:normal;
   text-align: center;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 .tg th{font-family:Arial, sans-serif;
   font-size:17px;
@@ -144,6 +148,8 @@ p, td, tr{
   overflow:auto;
   word-break:normal;
   text-align: center;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 .tg .tg-yw4l{
   vertical-align:top
@@ -152,6 +158,7 @@ p, td, tr{
   .tg {width: auto !important;
   }.tg col {width: auto !important;
      }.tg-wrap {overflow-x: auto;
+             overflow-y: scroll; /* has to be scroll, not auto */
              -webkit-overflow-scrolling: touch;
              margin: auto 0px;
            }}
